# fastapi-mongodb-starter-template

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
authentication/: api.py  entities.py  exceptions.py  models.py  repo.py  schemas.py  security.py  service.py
authentication/avatar/: api.py  service.py
common/: concurrency.py  config.py  exceptions.py  injection.py  log.py  optional.py  schemas.py
common/database/: beanie.py  redis.py
common/utils/mail/: api.py  config.py  schema.py  service.py
common/utils/mail/templates/: verification.html
common/utils/utilities/verification_code/: entity.py  repo.py  service.py
